Add wrapper to MODAct problems

--- a/doc/source/problems/index.ipynb
+++ b/doc/source/problems/index.ipynb
@@ -243,7 +243,8 @@
     "|[MW13](constrained/mw.ipynb)|15|2|2||\n",
     "|[MW14](constrained/mw.ipynb)|15|3|1||\n",
     "|[SymPart](multi/sym_part.ipynb)|2|2|&nbsp;||\n",
-    "|[OmniTest](multi/omni_test.ipynb)|s|2|&nbsp;||"
+    "|[OmniTest](multi/omni_test.ipynb)|s|2|&nbsp;||\n",
+    "|[MODAct](constrained/modact.ipynb)|20|2-5|7-10|Real-world mechanical design problems|"
    ]
   },
   {
