--- a/doc/source/references.bib
+++ b/doc/source/references.bib
@@ -588,3 +588,14 @@ series = {EMO’07}
 }
 
 
+
+@article{modact,
+  title = {Realistic {{Constrained Multi}}-{{Objective Optimization Benchmark Problems}} from {{Design}}},
+  author = {Picard, Cyril and Schiffmann, J{\"u}rg},
+  year = {2020},
+  pages = {1--1},
+  issn = {1941-0026},
+  doi = {10.1109/TEVC.2020.3020046},
+  journal = {IEEE Transactions on Evolutionary Computation},
+}
+
