--- a/doc/source/algorithms/cmaes.ipynb
+++ b/doc/source/algorithms/cmaes.ipynb
@@ -51,10 +51,9 @@
      "output_type": "stream",
      "text": [
       "Best solution found: \n",
-      "X = [0.50000003 0.49999998 0.49999997 0.49999998 0.50000001 0.49999996\n",
-      " 0.50000001 0.50000005 0.50000003 0.49999997]\n",
-      "F = [0.50000003 0.49999998 0.49999997 0.49999998 0.50000001 0.49999996\n",
-      " 0.50000001 0.50000005 0.50000003 0.49999997]\n",
+      "X = [0.50000002 0.5        0.49999997 0.4999999  0.50000002 0.5000001\n",
+      " 0.50000002 0.50000003 0.49999993 0.49999998]\n",
+      "F = [2.87068541e-14]\n",
       "CV= [0.]\n"
      ]
     }
@@ -73,7 +72,7 @@
     "               seed=1,\n",
     "               verbose=False)\n",
     "\n",
-    "print(f\"Best solution found: \\nX = {res.X}\\nF = {res.X}\\nCV= {res.CV}\")"
+    "print(f\"Best solution found: \\nX = {res.X}\\nF = {res.F}\\nCV= {res.CV}\")"
    ]
   },
   {
@@ -95,20 +94,20 @@
       "==============================================================================\n",
       "n_gen |  n_eval |     fopt     |    sigma     | min std  | max std  |   axis  \n",
       "==============================================================================\n",
-      "    1 |      60 |  0.133463674 |  0.500000000 |  0.50000 |  0.50002 |  1.00005\n",
-      "    2 |      70 |  0.133463674 |  0.463381518 |  0.44629 |  0.46639 |  1.15286\n",
-      "    3 |      80 |  0.133463674 |  0.436701428 |  0.40921 |  0.44803 |  1.18107\n",
-      "    4 |      90 |  0.133463674 |  0.425205890 |  0.38587 |  0.44507 |  1.24044\n",
-      "    5 |     100 |  0.133463674 |  0.446216508 |  0.40272 |  0.49455 |  1.40662\n",
-      "    6 |     110 |  0.133463674 |  0.443206052 |  0.39605 |  0.49372 |  1.43751\n",
-      "    7 |     120 |  0.133463674 |  0.408769762 |  0.34899 |  0.46210 |  1.53753\n",
-      "    8 |     130 |  0.133463674 |  0.387642883 |  0.32993 |  0.42921 |  1.55934\n",
-      "    9 |     140 |  0.133463674 |  0.393580623 |  0.33527 |  0.42227 |  1.61905\n",
-      "   10 |     150 |  0.133463674 |  0.379056030 |  0.32028 |  0.40238 |  1.64164\n",
+      "    1 |      60 |  0.421591427 |  0.500000000 |  0.50000 |  0.50002 |  1.00005\n",
+      "    2 |      70 |  0.421591427 |  0.458088026 |  0.43949 |  0.46278 |  1.17440\n",
+      "    3 |      80 |  0.421591427 |  0.467470087 |  0.42753 |  0.48142 |  1.29526\n",
+      "    4 |      90 |  0.421591427 |  0.435714954 |  0.39906 |  0.45876 |  1.32793\n",
+      "    5 |     100 |  0.421591427 |  0.425873464 |  0.38563 |  0.44966 |  1.33977\n",
+      "    6 |     110 |  0.421591427 |  0.414582965 |  0.36733 |  0.44440 |  1.40989\n",
+      "    7 |     120 |  0.274739631 |  0.377037661 |  0.33700 |  0.40772 |  1.42732\n",
+      "    8 |     130 |  0.274739631 |  0.348738876 |  0.30136 |  0.37474 |  1.49573\n",
+      "    9 |     140 |  0.274739631 |  0.332495261 |  0.28208 |  0.36256 |  1.55969\n",
+      "   10 |     150 |  0.274739631 |  0.327084395 |  0.27217 |  0.35377 |  1.64178\n",
       "Best solution found: \n",
-      "X = [0.55887428 0.7425446  0.48866314 0.41743478 0.42824528 0.30592316\n",
-      " 0.54092945 0.39329839 0.40963514 0.48646314]\n",
-      "F = [0.13346367]\n"
+      "X = [0.57805887 0.46502257 0.37558049 0.32576733 0.09385291 0.39955762\n",
+      " 0.45885221 0.67440208 0.61319534 0.45976016]\n",
+      "F = [0.27473963]\n"
      ]
     }
    ],
@@ -156,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Also, easily restarts can be used which are known to work very well on multi-modal functions. For instance, `Rastrigin` can be solved rather quickly by:"
+    "Also, easily restarts can be used, which are known to work very well on multi-modal functions. For instance, `Rastrigin` can be solved rather quickly by:"
    ]
   },
   {
@@ -192,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our framework internally calls the `cma.fmin2` function. All parameters which can be used there either as a keyword argument or an option can also be passed to the `CMAES` constructor as well.\n",
+    "Our framework internally calls the `cma.fmin2` function. All parameters that can be used there either as a keyword argument or an option can also be passed to the `CMAES` constructor.\n",
     "An example with a few selected `cma.fmin2` parameters is shown below:"
    ]
   },
@@ -240,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more details about hyperparameters we refer to the software documentation of the `fmin2` in CMA-ES which can be found [here](http://cma.gforge.inria.fr/apidocs-pycma/cma.evolution_strategy.html#fmin2).\n",
+    "For more details about hyperparameters, we refer to the software documentation of the `fmin2` in CMA-ES, which can be found [here](http://cma.gforge.inria.fr/apidocs-pycma/cma.evolution_strategy.html#fmin2).\n",
     "A quick explanation of possible parameters is also provided in the API documentation below."
    ]
   },
