--- a/doc/source/algorithms/unsga3.ipynb
+++ b/doc/source/algorithms/unsga3.ipynb
@@ -16,9 +16,9 @@
     "## U-NSGA-III\n",
     "\n",
     "\n",
-    "The algorithm is implemented based on <cite data-cite=\"unsga3\"></cite>. NSGA-III selects parents randomly for mating. It has been shown that tournament selection performs better than random selection. The *U* stands for *unified* and increases the performance of NSGA-III by introducing tournament pressure. \n",
+    "The algorithm is implemented based on <cite data-cite=\"unsga3\"></cite>. NSGA-III selects parents randomly for mating. It has been shown that tournament selection performs better than random selection. The *U* stands for *unified* and increases NSGA-III's performance by introducing tournament pressure. \n",
     "\n",
-    "The mating selections works as follows:\n"
+    "The mating selections works as follows:"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "metadata": {},
    "source": [
     "U-NSGA-III has for single- and bi-objective problems a tournament pressure which is known to be useful.\n",
-    "In the following we provide a quick comparison (here just one run, so not a valid experiment), to see the difference in convergence."
+    "In the following, we provide a quick comparison (here just one run, so not a valid experiment) to see the difference in convergence."
    ]
   },
   {
