--- a/doc/source/customization/initialization.ipynb
+++ b/doc/source/customization/initialization.ipynb
@@ -48,22 +48,22 @@
       "============================================================\n",
       "n_gen |  n_eval |     igd      |      gd      |      hv     \n",
       "============================================================\n",
-      "    1 |     300 |  3.605813265 |  3.901970827 |  0.00000E+00\n",
-      "    2 |     400 |  3.605813265 |  3.809608095 |  0.00000E+00\n",
-      "    3 |     500 |  3.098601446 |  3.551175044 |  0.00000E+00\n",
-      "    4 |     600 |  3.046015399 |  3.176936887 |  0.00000E+00\n",
-      "    5 |     700 |  3.020422897 |  3.191642973 |  0.00000E+00\n",
-      "    6 |     800 |  2.593867789 |  3.153178208 |  0.00000E+00\n",
-      "    7 |     900 |  2.593469244 |  2.883230780 |  0.00000E+00\n",
-      "    8 |    1000 |  2.434939640 |  2.688858364 |  0.00000E+00\n",
-      "    9 |    1100 |  2.410435326 |  2.640276640 |  0.00000E+00\n",
-      "   10 |    1200 |  2.148058986 |  2.467354071 |  0.00000E+00\n"
+      "    1 |     300 |  3.471768692 |  3.587430605 |  0.00000E+00\n",
+      "    2 |     400 |  3.250182194 |  3.366942490 |  0.00000E+00\n",
+      "    3 |     500 |  3.018163811 |  3.135302044 |  0.00000E+00\n",
+      "    4 |     600 |  2.966398381 |  3.068969788 |  0.00000E+00\n",
+      "    5 |     700 |  2.966398381 |  2.891308016 |  0.00000E+00\n",
+      "    6 |     800 |  2.591037835 |  2.661727088 |  0.00000E+00\n",
+      "    7 |     900 |  2.501132824 |  2.609785978 |  0.00000E+00\n",
+      "    8 |    1000 |  2.304690641 |  2.277467098 |  0.00000E+00\n",
+      "    9 |    1100 |  2.192357202 |  2.015241496 |  0.00000E+00\n",
+      "   10 |    1200 |  2.091910951 |  1.893455937 |  0.00000E+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.model.result.Result at 0x7fdc240e2590>"
+       "<pymoo.model.result.Result at 0x7ff64fa00550>"
       ]
      },
      "execution_count": 1,
@@ -112,22 +112,28 @@
       "============================================================\n",
       "n_gen |  n_eval |     igd      |      gd      |      hv     \n",
       "============================================================\n",
-      "    1 |       0 |  3.159007964 |  3.497851743 |  0.00000E+00\n",
-      "    2 |     100 |  3.159007964 |  3.472605209 |  0.00000E+00\n",
-      "    3 |     200 |  3.127194911 |  3.429181499 |  0.00000E+00\n",
-      "    4 |     300 |  3.102944029 |  3.136150079 |  0.00000E+00\n",
-      "    5 |     400 |  2.711423416 |  2.924067547 |  0.00000E+00\n",
-      "    6 |     500 |  2.543371942 |  2.907522469 |  0.00000E+00\n",
-      "    7 |     600 |  2.149343130 |  2.622581124 |  0.00000E+00\n",
-      "    8 |     700 |  1.872917882 |  2.375802009 |  0.00000E+00\n",
-      "    9 |     800 |  1.872917882 |  2.298050294 |  0.00000E+00\n",
-      "   10 |     900 |  1.842035658 |  2.195838663 |  0.00000E+00\n"
+      "    1 |       0 |  3.508830371 |  3.842622666 |  0.00000E+00\n",
+      "    2 |     100 |  3.508830371 |  3.762053267 |  0.00000E+00\n",
+      "    3 |     200 |  3.232274122 |  3.492602355 |  0.00000E+00\n",
+      "    4 |     300 |  3.224748750 |  3.276434248 |  0.00000E+00\n",
+      "    5 |     400 |  2.999424499 |  3.089373128 |  0.00000E+00\n",
+      "    6 |     500 |  2.889836744 |  2.878663281 |  0.00000E+00\n",
+      "    7 |     600 |  2.532291653 |  2.723713067 |  0.00000E+00\n",
+      "    8 |     700 |  2.250234735 |  2.782304442 |  0.00000E+00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    9 |     800 |  2.125667798 |  2.677990232 |  0.00000E+00\n",
+      "   10 |     900 |  2.125667798 |  2.510500998 |  0.00000E+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pymoo.model.result.Result at 0x7fdc244fed90>"
+       "<pymoo.model.result.Result at 0x7ff6514465d0>"
       ]
      },
      "execution_count": 2,
@@ -177,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
