--- a/doc/source/getting_started.ipynb
+++ b/doc/source/getting_started.ipynb
@@ -764,6 +764,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The [Result](interface/result.ipynb) object provides the corresponding X and F values and some more information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Object-Oriented Interface"
    ]
   },
@@ -772,7 +779,9 @@
    "metadata": {},
    "source": [
     "On the contrary, the object-oriented approach directly modifies the algorithm object by calling the `next` method. Thus, it makes sense to create a deepcopy of the algorithm object beforehand, as shown in the code below.\n",
-    "In the while loop, the algorithm object can be accessed to be modified or for other purposes."
+    "In the while loop, the algorithm object can be accessed to be modified or for other purposes.\n",
+    "\n",
+    "**NOTE**: In this guide, we have used the functional interface because the history is used during analysis."
    ]
   },
   {
@@ -847,13 +856,6 @@
     "    \n",
     "# finally obtain the result object\n",
     "result = obj.result()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The [Result](interface/result.ipynb) object provides the corresponding X and F values and some more information."
    ]
   },
   {
@@ -1408,6 +1410,7 @@
     "res = minimize(problem,\n",
     "               algorithm,\n",
     "               (\"n_gen\", 100),\n",
+    "               verbose=True,\n",
     "               seed=1)\n",
     "\n",
     "plot = Scatter()\n",
