--- a/doc/source/interface/result.ipynb
+++ b/doc/source/interface/result.ipynb
@@ -96,12 +96,12 @@
     {
      "data": {
       "text/plain": [
-       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x7fbe07250e10>,\n",
-       " Population([<pymoo.model.individual.Individual object at 0x7fbe07263610>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fbe07263510>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fbe07263410>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fbe07263110>,\n",
-       "             <pymoo.model.individual.Individual object at 0x7fbe07263350>],\n",
+       "(<pymoo.algorithms.so_genetic_algorithm.GA at 0x7f9ebc16d050>,\n",
+       " Population([<pymoo.model.individual.Individual object at 0x7f9ebc173650>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7f9ebc173210>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7f9ebc173850>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7f9ebc173410>,\n",
+       "             <pymoo.model.individual.Individual object at 0x7f9ebc173490>],\n",
        "            dtype=object))"
       ]
      },
@@ -356,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
