--- a/doc/source/misc/checkpoint.ipynb
+++ b/doc/source/misc/checkpoint.ipynb
@@ -52,7 +52,7 @@
       "    3 |     300 |  0.439419904 |  1.872462802 |  0.155903707\n",
       "    4 |     400 |  0.406628182 |  1.691762017 |  0.171264712\n",
       "    5 |     500 |  0.346478785 |  1.554097169 |  0.232891285\n",
-      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fb46ab02850>\n",
+      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fe4c1300b50>\n",
       "    6 |     600 |  0.260455007 |  1.253989046 |  0.265093318\n",
       "    7 |     700 |  0.222821654 |  0.717126159 |  0.347501941\n",
       "    8 |     800 |  0.203582202 |  0.391439629 |  0.375532991\n",
@@ -122,11 +122,17 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "3\n",
       "4\n",
       "5\n",
-      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fb46aa7e390>\n",
+      "Loaded Checkpoint: <pymoo.algorithms.nsga2.NSGA2 object at 0x7fe4c1328950>\n",
       "6\n",
       "7\n",
       "8\n",
@@ -249,10 +255,22 @@
       "===========================================================================\n",
       "n_gen |  n_eval |   cv (min)   |   cv (avg)   |     fopt     |     favg    \n",
       "===========================================================================\n",
-      "    1 |       0 |  2.081623241 |  4.477105114 |            - |            -\n",
+      "    1 |       0 |  2.081623241 |  4.477105114 |            - |            -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "    2 |     100 |  0.00000E+00 |  0.348655365 | -3.92561E+00 | -1.04428E+00\n",
       "    3 |     200 |  0.00000E+00 |  0.00000E+00 | -4.29306E+00 | -1.54877E+00\n",
-      "    4 |     300 |  0.00000E+00 |  0.00000E+00 | -4.29306E+00 | -2.39171E+00\n",
+      "    4 |     300 |  0.00000E+00 |  0.00000E+00 | -4.29306E+00 | -2.39171E+00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "    5 |     400 |  0.00000E+00 |  0.00000E+00 | -4.36020E+00 | -3.12053E+00\n",
       "    6 |     500 |  0.00000E+00 |  0.00000E+00 | -5.40420E+00 | -3.65667E+00\n",
       "    7 |     600 |  0.00000E+00 |  0.00000E+00 | -5.71004E+00 | -4.13755E+00\n",
@@ -293,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
