--- a/doc/source/problems/custom.ipynb
+++ b/doc/source/problems/custom.ipynb
@@ -30,9 +30,9 @@
     "### By Class\n",
     "\n",
     "A very detailed description of defining a problem through a class is already provided in the [Getting Started Guide](../getting_started.ipynb).\n",
-    "In the following the definition of a simple optimization problem with **one** objective and **two** constraints is considered. The problem has two constants, *const_1* and *const_2* which can be modified by initiating the problem with different parameters. By default, it consists of 10 variable and the lower and upper bounds are within $[-5, 5]$ for all variables. \n",
+    "The following definition of a simple optimization problem with **one** objective and **two** constraints is considered. The problem has two constants, *const_1* and *const_2*, which can be modified by initiating the problem with different parameters. By default, it consists of 10 variables, and the lower and upper bounds are within $[-5, 5]$ for all variables. \n",
     "\n",
-    "**Note**: The example below uses the `autograd` library which allows to calculate the gradients through automatic differentiation."
+    "**Note**: The example below uses the `autograd` library, which calculates the gradients through automatic differentiation."
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After creating a problem object the evaluate function can be called. The *return_values_of* variable can be overwritten to modify the list of returned parameters. The gradients for the objectives `dF` and constraints `dG` can be obtained as follows:"
+    "After creating a problem object, the evaluation function can be called. The `return_values_of` parameter can be overwritten to modify the list of returned parameters. The gradients for the objectives `dF` and constraints `dG` can be obtained as follows:"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "source": [
     "**Elementwise Evaluation**\n",
     "\n",
-    "If the problem can not be executed by using matrix operations a serialized evaluation can be indicated by using the `elementwise_evaluation=True` flag. If the flag is set then an outer loop is already implemented an `x` is only an **one** dimensional array."
+    "If the problem can not be executed using matrix operations, a serialized evaluation can be indicated using the `elementwise_evaluation=True` flag. If the flag is set, then an outer loop is already implemented, an `x` is only a **one**-dimensional array."
    ]
   },
   {
@@ -127,7 +127,7 @@
    "source": [
     "### By Function\n",
     "\n",
-    "Another way of defining a problem is through functions. One the one hand many function calls need to be performed to evaluated a set of solutions, but on the other hand it is a very intuitive way of defining a problem."
+    "Another way of defining a problem is through functions. One the one hand, many function calls need to be performed to evaluate a set of solutions, but on the other hand, it is a very intuitive way of defining a problem."
    ]
   },
   {
@@ -142,13 +142,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F: [[24.31638931 62.07182019]\n",
-      " [26.06665525 59.00673646]\n",
-      " [24.93587349 60.19288967]]\n",
+      "F: [[23.72908701 62.10262903]\n",
+      " [18.80035297 71.01736199]\n",
+      " [23.97614288 61.87893463]]\n",
       "\n",
-      "CV: [[3.75524703]\n",
-      " [4.30167556]\n",
-      " [3.75012753]]\n"
+      "CV: [[3.32247252]\n",
+      " [1.85460523]\n",
+      " [3.45184082]]\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
    "source": [
     "### By String\n",
     "\n",
-    "In our framework various test problems are already implemented and available by providing the corresponding problem name we have assigned to it. A couple of problems can be further parameterized by provided for instance the number of variables, constraints or other problem dependent constants."
+    "In our framework, various test problems are already implemented and available by providing the corresponding problem name we have assigned to it. A couple of problems can be further parameterized by providing the number of variables, constraints, or other problem-dependent constants."
    ]
   },
   {
