--- a/doc/source/problems/gradients.ipynb
+++ b/doc/source/problems/gradients.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The gradients can be retried by appending *dF* to the *return_values_of* parameter:"
+    "The gradients can be retrieved by appending `F` to the `return_values_of` parameter:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The resulting gradients are stored in *dF* and the shape is (n_rows, n_objective, n_vars):"
+    "The resulting gradients are stored in `dF` and the shape is (n_rows, n_objective, n_vars):"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analogous, the gradient of constraints can be retrieved by appending *dG*."
+    "Analogously, the gradient of constraints can be retrieved by appending `dG`."
    ]
   }
  ],
