--- a/doc/source/problems/index.ipynb
+++ b/doc/source/problems/index.ipynb
@@ -73,9 +73,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Problems have to be defined and some information have to be provided.\n",
-    "In contrast to other frameworks we do not share the opinion of just defining a problem by a function.\n",
-    "In `pymoo` the problem is defined by a class which also contains some meta data, such as the number of objectives, constraints, lower and upper bounds in the design space and so on."
+    "Problems have to be defined, and some information has to be provided.\n",
+    "In contrast to other frameworks, we do not share the opinion of just defining a problem by a function.\n",
+    "In `pymoo` the problem is defined by a class that contains some metadata, such as the number of objectives, constraints, lower and upper bounds in the design space, and so on."
    ]
   },
   {
@@ -98,10 +98,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The actual function evaluation takes place in the `_evaluate` method which has to purpose to fill the `out` dictionary with the corresponding evaluation data. The function values are supposed to be written into `out[\"F\"]`  \n",
-    "and the constraints into `out[\"G\"]`  if `n_constr` is greater than zero. \n",
+    "The actual function evaluation takes place in the `_evaluate` method, which has to purpose to fill the `out` dictionary with the corresponding evaluation data. The function values are supposed to be written into `out[\"F\"]` and the constraints into `out[\"G\"]`  if `n_constr` is greater than zero. \n",
     "\n",
-    "The example below shows a modified **Sphere** function with a radial constraint located at the center. The problem consists of 10 design variables, one objective, one constraint and the lower and upper bounds of each variable are in the range of 0 and 1. "
+    "The example below shows a modified **Sphere** function with a radial constraint located at the center. The problem consists of 10 design variables, one objective, one constraint, and the lower and upper bounds of each variable are in the range of 0 and 1. "
    ]
   },
   {
@@ -146,9 +145,9 @@
    "source": [
     "### Test Problems\n",
     "\n",
-    "In the future we are planning to provide a comprehensive overview of problems. So far we have managed to describe a view of them and plot the functions. Please note, that we have used for some problems the descriptions from [here](https://www.sfu.ca/~ssurjano/).\n",
+    "In the future, we are planning to provide a comprehensive overview of the problems. So far, we have managed to describe a view of them and plot the functions. Please note that we have used for some problems the descriptions from [here](https://www.sfu.ca/~ssurjano/).\n",
     "\n",
-    "We would like to keep the function definitions as error free as possible and matching with the implementation. If you find any deviation please let us know.\n"
+    "We want to keep the function definitions as error-free as possible and matching with the implementation. If you find any deviation, please let us know."
    ]
   },
   {
