--- a/doc/source/problems/parallelization.ipynb
+++ b/doc/source/problems/parallelization.ipynb
@@ -20,9 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In practice parallelization is important and can significantly speed up the optimization. \n",
-    "For population-based algorithms the evaluation of a set of solutions can be parallelized easily \n",
-    "by parallelization the evaluation itself."
+    "In practice, parallelization is essential and can significantly speed up optimization. \n",
+    "For population-based algorithms, the evaluation of a set of solutions can be parallelized easily \n",
+    "by parallelizing the evaluation itself."
    ]
   },
   {
@@ -31,9 +31,9 @@
    "source": [
     "# Vectorized Matrix Operations\n",
     "\n",
-    "One way is using the `NumPy` matrix operations which has been used for almost all test problems implemented in *pymoo*.\n",
-    "By default `elementwise_evaluation` is set to `False` which implies the `_evaluate` retrieves a set of solutions.\n",
-    "Thus, `x` is a matrix where each row is an individual and each column a variable."
+    "One way is using the `NumPy` matrix operations, which has been used for almost all test problems implemented in *pymoo*.\n",
+    "By default, `elementwise_evaluation` is set to `False`, which implies the `_evaluate` retrieves a set of solutions.\n",
+    "Thus, `x` is a matrix where each row is an individual, and each column a variable."
    ]
   },
   {
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `axis=1` operation parallelizes the sum of the matrix directly using an efficient numpy operation."
+    "The `axis=1` operation parallelizes the sum of the matrix directly using an efficient NumPy operation."
    ]
   },
   {
@@ -89,11 +89,12 @@
    "source": [
     "## Starmap Interface\n",
     "\n",
-    "In general **pymoo** allows to pass a `starmap` object to be used for parallelization. \n",
+    "In general, **pymoo** allows passing a `starmap` object to be used for parallelization. \n",
     "The `starmap` interface is defined in the Python standard library `multiprocessing.Pool.starmap` [function](https://docs.python.org/3/library/multiprocessing.html?highlight=multiprocessing#multiprocessing.pool.Pool.starmap).\n",
-    "This allows great and flexible parallelization opportunities. \n",
+    "This allows excellent and flexible parallelization opportunities. \n",
     "\n",
-    "**IMPORTANT:** Please note that the problem needs to have set `elementwise_evaluation=True` which implicates one call of `_evaluate` only takes care of a single solution.\n"
+    "**IMPORTANT:** Please note that the problem needs to have set `elementwise_evaluation=True`, which implicates one call of `_evaluate` only takes care of a single solution.\n",
+    "\n"
    ]
   },
   {
@@ -256,9 +257,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "More advanced is to distribute the evaluation function to a couple of workers. There exists a couple of framework that support the distribution of code. For our framework, we recommend using [Dask](https://dask.org).\n",
+    "More advanced is to distribute the evaluation function to a couple of workers. There exists a couple of frameworks that support the distribution of code. For our framework, we recommend using [Dask](https://dask.org).\n",
     "\n",
-    "A documentation to setup the cluster is available [here](https://docs.dask.org/en/latest/setup/cli.html). Basically, you first start a scheduler somewhere and then connect workers to it. Then, a client object connects to the scheduler and distributes the jobs automatically for you."
+    "Documentation to setup the cluster is available [here](https://docs.dask.org/en/latest/setup/cli.html). You first start a scheduler somewhere and then connect workers to it. Then, a client object connects to the scheduler and distributes the jobs automatically for you."
    ]
   },
   {
@@ -329,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** Here the overhead of transferring data to the workers of Dask is dominating. However, if your problem is computationally more expensive this shall not be the case anymore."
+    "**Note:** Here, the overhead of transferring data to the workers of Dask is dominating. However, if your problem is computationally more expensive, this shall not be the case anymore."
    ]
   },
   {
@@ -343,8 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you need more control over the parallelization process, we like to provide an example of implementation a custom parallelization.\n",
-    "Since by default `elementwise_evaluation` is disabled the `_evaluate` gets the whole set of solutions to be evaluated."
+    "If you need more control over the parallelization process, we like to provide an example of fully customizable parallelization. The `_evaluate` function gets the whole set of solutions to be evaluated because, by default, `elementwise_evaluation` is disabled."
    ]
   },
   {
@@ -359,7 +359,7 @@
    "metadata": {},
    "source": [
     "Thus, a thread pool can be initialized in the constructor of the `Problem` class and then be used to speed up the evaluation.\n",
-    "The code below basically does what internally happens using the `starmap` interface of *pymoo* directly (with an inline function definition and without some overhead this is why it is actually slightly faster)."
+    "The code below basically does what internally happens using the `starmap` interface of *pymoo* directly (with an inline function definition and without some overhead, this is why it is slightly faster)."
    ]
   },
   {
